@@ -1,5 +1,9 @@
 yoshimi 2.2.2.1
 
+2023-1-7 Will
+bn2165
+Revised formant filter GUI so unused vowels are identified.
+
 2023-1-3 Will
 bn2164
 BugFix: When filter type is analog low 1 or high 1, filter Q knob
